# flutter_sequencer

./: .gitignore  README.md  build.gradle  pubspec.yaml  settings.gradle
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/Utils/: AssetManager.h
android/src/main/kotlin/com/example/flutter_sequencer/: FlutterSequencerPlugin.kt
android/src/test/kotlin/com/example/flutter_sequencer/: FlutterSequencerPluginTest.kt
cpp_test/: CMakeLists.txt  CMakeLists.txt.in
example/: README.md  pubspec.yaml
example/android/: settings.gradle
example/android/app/: build.gradle
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/original/: original_main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  (+1 more)
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: flutter_sequencer.podspec
ios/Classes/: FlutterSequencerPlugin.swift
lib/: build.gradle
lib/original/: flutter_sequencer.dart  flutter_sequencer_method_channel.dart  flutter_sequencer_platform_interface.dart  flutter_sequencer_web.dart
linux/: CMakeLists.txt  flutter_sequencer_plugin.cc  flutter_sequencer_plugin_private.h
linux/test/: flutter_sequencer_plugin_test.cc
macos/: flutter_sequencer.podspec
macos/Classes/: FlutterSequencerPlugin.swift
test/: flutter_sequencer_method_channel_test.dart  flutter_sequencer_test.dart
windows/: CMakeLists.txt  flutter_sequencer_plugin.cpp  flutter_sequencer_plugin.h  flutter_sequencer_plugin_c_api.cpp
windows/test/: flutter_sequencer_plugin_test.cpp
(+12 files in other folders)
